@@ -141,6 +141,26 @@ which will be used to configure the chosen Forrest skin.
       background-color: #f0f0f0;
       font-family: monospace;
     }
+    
+    <!--Headers -->
+	#content h1 {
+	  margin-bottom: .5em;
+	  font-size: 200%; color: black;
+	  font-family: arial;
+	}  
+    h2, .h3 { font-size: 195%; color: black; font-family: arial; }
+	h3, .h4 { font-size: 140%; color: black; font-family: arial; margin-bottom: 0.5em; }
+	h4, .h5 { font-size: 125%; color: black;  font-style: italic; font-weight: bold; font-family: arial; }
+	h5, h6 { font-size: 110%; color: #363636; font-weight: bold; } 
+   
+   <!--Code Background -->
+    pre.code {
+      margin-left: 0em;
+      padding: 0.5em;
+      background-color: rgb(241,239,231);
+      font-family: monospace;
+    }   
+    
   </extra-css>
 
   <colors>
